Create a service to manage music playback!
Notifies clients of metadata updates (technically).
Should keep running in background, but not forever (yet)
Doesn't do any well-behaved audio stuff, nor foreground stuff.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.vinceblas.sandbox" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="net.vinceblas.sandbox" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -10,8 +11,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +21,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ExoActivity" />
+        <activity android:name=".activities.ExoActivity" />
+        <activity android:name=".activities.ExoServiceActivity" />
+        <service android:name=".ExoService"/>
     </application>
 
 </manifest>
